Fixed spacing issue on homepage wrapper

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -93,8 +93,7 @@
   }
 }
 .wrapper {
-  height: 100vh;
-  width: 100vw;
+  height: calc(100vh - 32px);
   background: #232323;
   margin-left: var(--sidebar-width);
   padding: 64px;
@@ -114,5 +113,5 @@
 }
 .wrapper .hero h2 {
   font-size: 24px;
-  color: #171717;
+  color: #b5b5b5;
 }/*# sourceMappingURL=style.css.map */
